--- a/package.json
+++ b/package.json
@@ -25,6 +25,12 @@
   },
   "homepage": "https://configoat.com",
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
+    "@types/node": "^20.11.16",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "axios": "^1.6.7",
+    "lodash": "^4.17.21"
   }
 }
