--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@configoat/sdk",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Configuration manager made for teams",
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "publish": "npm publish --access public"
+    "release": "npm i --package-lock-only && npm publish --access public"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "npm": "^10.4.0",
+    "publish": "^0.6.0"
   }
 }
